Fixing issues with swagger and h2 db, still issues with CRUD operations testing. Also unit tests are added but not working properly yet.